# build-your-own-domain-library

./: .env.example  .gitignore  CONTRIBUTING.md  FOR-AGENTS.md  LICENSE  PAGE_SCHEMA.md  README.md  SECURITY.md  VOCABULARY_GUIDE.md  domain-library-pipeline-flowchart.md  index.md  library-pipeline-flowchart-operator-guide.md  library.py  log.md  pyproject.toml
.github/workflows/: ci.yml
_meta/: __init__.py
_meta/agents/: math.md  orchestrator.md
_meta/config/: domain.json
_meta/contracts/: PAGE_SCHEMA.md  VOCABULARY_GUIDE.md  concept-form-contract.md  form-contract.md  graph-vocabulary-quickref.md
_meta/schemas/: extraction_schema.py
_meta/scripts/: __init__.py  block_annotator.py  blockid_validator.py  chapter_size_splitter.py  chapter_splitter.py  docs_drift_check.sh  extraction_units.py  fidelity_reconstructor.py  html_table_converter.py  image_chapter_mapper.py  latex_slug_filter.py  library_audit.py  library_phase1_ocr.py  library_phase23_blocks.py  library_phase24_images.py  library_phase2_chapters.py  library_phase30_vision.py  library_phase31_source_index.py  library_phase32_size_split.py  library_phase33_dispatch.py  library_phase34_verify.py  library_phase35_presentations.py  library_phase4_merge_score.py  library_phase5_pages.py  library_pipeline_test_suite.py  pipeline_common.py  pipeline_run_manifest.py  prune_raw.py  rebuild_index.py  repair_embeds.py  requirements.txt  resolve_ocr_output.py  scoring_layer.py  source_grounding_quality.py  team_presentation_assembler.py  verify_image_refs.py  (+2 more)
domain_library/: __init__.py  paths.py
(+53 files in other folders)
